# vulkan-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: monkey_smooth.mtl
shaders/: colored_triangle.frag  colored_triangle.vert  default_lit.frag  tri_mesh.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_types.h
